<resources>
    <string name="app_name">Deque University for Android</string>
    <string name="app_name_short">DequeU</string>
    <string name="navigation_drawer_title">Deque University for Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_heading_demos">Demos</string>
    <string name="aac_logo_cont_desc">Deque logo</string>
    <string name="aac_navigation_drawer_non_sighted_icon_cont_desc">Non sighted simulation icon</string>
    <string name="aac_navigation_drawer_non_sighted_icon_text">TalkBack Simulation</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="aac_tab_title_about">About</string>
    <string name="aac_tab_title_broken">Broken</string>
    <string name="aac_tab_title_fixed">Fixed</string>
    <string name="aac_learn_more">Learn More About:</string>
    <string name="aac_talkBack_link"><a href="http://support.google.com/accessibility/android/answer/6007100?hl=en">TalkBack</a></string>
    <string name="aac_contact_us_link"><a href="http://accessibility.deque.com/contact-deque-today">Deque: Contact Us</a></string>
    <string name="aac_website_link"><a href="http://www.deque.com/">Deque: Website</a></string>
    <string name="aac_cont_desc_link"><a href="http://developer.android.com/training/accessibility/accessible-app.html#contentdesc">Content Descriptions</a></string>
    <string name="aac_label_for_link"><a href="http://developer.android.com/reference/android/R.attr.html#labelFor">Label For Attributes </a></string>
    <string name="aac_editText_link"><a href="http://developer.android.com/reference/android/widget/EditText.html">EditTexts</a></string>
    <string name="aac_image_view_link"><a href="http://developer.android.com/reference/android/widget/ImageView.html">ImageViews</a></string>
    <string name="aac_text_view_link"><a href="http://developer.android.com/reference/android/widget/TextView.html">TextViews</a></string>
    <string name="aac_hint_link"><a href="http://developer.android.com/reference/android/R.attr.html#hint">Hints</a></string>
    <string name="aac_tabLayout_link"><a href="https://developer.android.com/reference/android/support/design/widget/TabLayout.html">TabLayout</a></string>
  <string name="aac_link_wcag_3_1_4"><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/meaning-located.html"></a>Understanding W Cag 3.1.4</string>
    <string name="aac_link_wcag_4_1_2"><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/ensure-compat-rsv.html">Understanding W Cag 4.1.2</a></string>
    <string name="aac_link_wcag_1_1_1"><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/text-equiv-all.html">Understanding W Cag 1.1.1</a></string>
    <string name="aac_link_wcag_2_4_3"><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/navigation-mechanisms-focus-order.html">Understanding W Cag 2.4.3</a></string>
    <string name="aac_link_wcag_1_3_1"><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/content-structure-separation-programmatic.html">Understanding W Cag 1.3.1</a></string>
    <string name="aac_link_wcag_3_3_6"><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/minimize-error-reversible-all.html">Understanding W Cag 3.3.6</a></string>
    <string name="aac_intro_title">Introduction</string>
    <string name="aac_intro_tab_1">Accessibility 101</string>
    <string name="aac_intro_about_paragraph1">Welcome to Accessibility 101.  This app will take you through a set of demonstrations that aim to help developers understand the implications the Android Accessibility APIs have for users with disabilities.\n\nBe sure to enable <i>TalkBack</i>.  The demonstrations in this app use Android\'s accessibility APIs and are only meaningful in this context.  It is also helpful to enable the <i>TalkBack</i> shortcut, so you can turn <i>TalkBack</i> on and off easily.</string>
    <string name="aac_intro_about_paragraph1_content_description">Welcome to Accessibility 101.  This app will take you through a set of demonstrations that aim to help developers understand the implications the Android Accessibility Application Program Interfaces have for users with disabilities.\n\nBe sure to enable <i>TalkBack</i>.  The demonstrations in this app use Android\'s accessibility Application Program Interfaces and are only meaningful in this context.  It is also helpful to enable the <i>TalkBack</i> shortcut, so you can turn <i>TalkBack</i> on and off easily.</string>
    <string name="aac_intro_deque_heading">About Deque</string>
    <string name="aac_intro_deque_paragraph1">Digital accessibility is both our mission and our passion. For over fifteen years we have been helping major corporations, government agencies, and other organizations ensure that their websites and mobile apps are accessible to everyone. Every one of us at Deque, and some of us have been with the company since it was founded in 1999, cares deeply about making sure people with disabilities are able to fully enjoy the benefits of the web. Helping our customers grow their brands, be inclusive and provide all of their customers with the best possible digital customer experience gives us joy. No matter who you work with at Deque you can be confident that you are in skillful and caring hands. Feel free to <i>Contact Us</i> or visit our <i>website</i> for more information.</string>
    <string name="aac_labels_title">Labels</string>
    <string name="aac_labels_content_description">This is a content description.</string>
    <string name="aac_acronym_broken_flight">Flight XY-111 to Los Angeles, CA is on time to depart in 45m</string>
    <string name="aac_acronym_flight_cont_desc">Flight X Y 111 to Los Angeles, California is on time to depart in forty-five minutes</string>
    <string name="aac_acronym_the_fix">This issues can be fixed by adding a <i>content description</i> to the text field. The <i>content description</i> should have the same text as the body except the acronyms should e replaced with their expanded terms. No, CA is always announced as \"California\" and 45m is always \"forty-five minutes,\" no matter which device or version of Android the user has.</string>
    <string name="aac_acronym_the_fix_cont_desc">By adding a content description for the text field with the same text from the body, but replacing the acronyms with their actual meanings. Now, C-A is always announced as California and forty-five M is always forty-five minutes, no matter which device or version of android the user has.</string>
    <string name="aac_talkBack_about_description">Turn on TalkBack and click on this icon in the upper right hand corner of any story to simulate what it\'s like to rely on TalkBack to navigate through the screen.</string>
    <string name="aac_talkBack_about_what_is_talkBack_heading">What is TalkBack?</string>
    <string name="aac_talkBack_about_how_to_use_heading">How to Use TalkBack</string>
    <string name="aac_talkBack_about_how_to_turn_on_heading">How to Turn on TalkBack</string>
    <string name="aac_talkBack_about_try_it_heading">Try It Out!</string>
    <string name="aac_talkBack_about_what_is_talkBack_paragraph"><i>TalkBack</i> is a pre-installed screen reader and accessibility tool on Android devices. When activated, it uses cues such as audible announcements, vibrations, and sounds to provide users with the information they need to navigate the screen. <i>TalkBack</i> works with <i>Explore by Touch</i>, which is a system feature, to enable users to touch the screen and hear what is selected, along with other valuable information such as which actions are available or which other screen elements are associated with the selected element. </string>
    <string name="aac_talkBack_about_how_to_turn_on_paragraph"><i>TalkBack</i> can be turned on by going into Settings > Accessibility > TalkBack and toggle the switch to turn it on (you will need to accept some conditions first). </string>
    <string name="aac_talkBack_about_how_to_use_paragraph">There are dozens of shortcuts and gestures that help people most efficiently utilize <i>TalkBack</i>. Below are the most common ones.</string>
    <string name="aac_talkBack_control_1"><b><i>Swipe down or right:</i></b> This scrolls \"down\" through views that can be highlighted.</string>
    <string name="aac_talkBack_control_2"><b><i>Swipe up or left:</i></b> This scrolls \"up\" through views that can be highlighted.</string>
    <string name="aac_talkBack_control_3"><b><i>Double tap:</i></b> This clicks on whichever view is currently highlighted. If clicking triggers an action for the current view, it will be triggered by this gesture when <i>TalkBack</i> is activated.</string>
    <string name="aac_talkBack_control_4"><b><i>Two fingered scroll:</i></b> To scroll down a screen, you need to use two fingers when <i>TalkBack</i> is activated.</string>
    <string name="aac_talkBack_demos_scroll_disclaimer">If you need to scroll down the page to view all its content when TalkBack is activated, don\'t forget to scroll with two fingers instead of one!</string>
    <string name="aac_talkBack_demos_step1_heading">Step 1: Turn on TalkBack</string>
    <string name="aac_talkBack_demos_step2_heading">Step 2: Scroll Down Through Views</string>
    <string name="aac_talkBack_demos_step3_heading">Step 3: Scroll Up Through Views</string>
    <string name="aac_talkBack_demos_step4_heading">Step 4: Explore By Touch</string>
    <string name="aac_talkBack_demos_step5_heading">Step 5: Double Tap to Click</string>
    <string name="aac_talkBack_demos_test_heading">Test Your Skills!</string>
    <string name="aac_talkBack_demos_step1_paragraph">Is TalkBack turned on? If not, see the \"About\" tab for instructions on how to do so. Once that\'s done, come back to this page and tap this TextView.</string>
    <string name="aac_talkBack_demos_step2_paragraph_1">Swipe right or down until you reach the EditText below.</string>
    <string name="aac_talkBack_demos_step2_editText_label">Enter your name</string>
    <string name="aac_talkBack_demos_step3_paragraph_1">Continue swiping right or down until you reach this view. Now try going backwards. Swipe left or up to scroll up through the views on the page. Continue this pattern until you get the hang of scrolling through views.</string>
    <string name="aac_talkBack_demos_imageView1_cont_desc">@string/aac_cont_desc_fixed_cat_cont_desc</string>
    <string name="aac_talkBack_demos_step4_paragraph_1">Tap and hold on the screen. Now move your finger around to explore the views this way. Once you lift your finger, whichever view was under it last will be highlighted.</string>
    <string name="aac_talkBack_demos_imageView2_cont_desc">@string/aac_cont_desc_fixed_dog_cont_desc</string>
    <string name="aac_talkBack_demos_step4_paragraph_2">Continue to explore the screen by touch, but at the end highlight the \"Advanced\" tab below.</string>
    <string name="aac_talkBack_demos_step5_paragraph">Once a clickable view, such as the EditText above, is highlighted, double tap the screen anywhere to perform a click action. Navigate to the EditText above (there are multiple ways to do this!) and double tap to edit it.</string>
    <string name="aac_talkBack_demos_test_paragraph">Click on this icon in the upper right hand corner to simulate what it\'s like to rely on TalkBack to navigate through the screen. See if you can navigate to different views and screens using your new <i>TalkBack</i> skills.</string>
</resources>