<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aac_story_background"
    tools:context="com.dequesystems.accessibility101.talkback.TalkBackAboutFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/aac_global_border">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/aac_global_border"
            android:background="@color/aac_background_text"
            android:orientation="vertical"
            android:padding="@dimen/aac_global_border">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/aac_talkBack_about_try_it_heading"
                android:textAppearance="@style/AACTextAppearance.heading" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/aac_talkBack_sim_image_size"
                    android:layout_height="@dimen/aac_talkBack_sim_image_size"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/aac_navigation_drawer_non_sighted_icon_cont_desc"
                    android:padding="@dimen/aac_global_border"
                    android:src="@drawable/aac_non_sighted_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/aac_global_border"
                    android:text="@string/aac_talkBack_about_description"
                    android:textAppearance="@style/AACTextAppearance.body" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/aac_global_border"
            android:background="@color/aac_background_text"
            android:orientation="vertical"
            android:padding="@dimen/aac_global_border">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/aac_talkBack_about_what_is_talkBack_heading"
                android:textAppearance="@style/AACTextAppearance.heading" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/aac_global_border"
                android:text="@string/aac_talkBack_about_what_is_talkBack_paragraph"
                android:textAppearance="@style/AACTextAppearance.body" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/aac_global_border"
            android:background="@color/aac_background_text"
            android:orientation="vertical"
            android:padding="@dimen/aac_global_border">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/aac_talkBack_about_how_to_turn_on_heading"
                android:textAppearance="@style/AACTextAppearance.heading" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/aac_global_border"
                android:text="@string/aac_talkBack_about_how_to_turn_on_paragraph"
                android:textAppearance="@style/AACTextAppearance.body" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/aac_global_border"
            android:background="@color/aac_background_text"
            android:orientation="vertical"
            android:padding="@dimen/aac_global_border">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/aac_talkBack_about_how_to_use_heading"
                android:textAppearance="@style/AACTextAppearance.heading" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/aac_global_border"
                android:text="@string/aac_talkBack_about_how_to_use_paragraph"
                android:textAppearance="@style/AACTextAppearance.body" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/aac_global_border"
                android:text="@string/aac_talkBack_control_1"
                android:textAppearance="@style/AACTextAppearance.body" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/aac_global_border"
                android:text="@string/aac_talkBack_control_2"
                android:textAppearance="@style/AACTextAppearance.body" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/aac_global_border"
                android:text="@string/aac_talkBack_control_3"
                android:textAppearance="@style/AACTextAppearance.body" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/aac_global_border"
                android:text="@string/aac_talkBack_control_4"
                android:textAppearance="@style/AACTextAppearance.body" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>