<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dequesystems.accessibility101.introduction.AppIntroductionFragment"
    android:background="@color/aac_story_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/aac_global_border"
            android:text="@string/aac_intro_about_paragraph1"
            android:background="@color/aac_background_text"
            android:textAppearance="@style/AACTextAppearance.body"
            android:linksClickable="false"
            android:padding="@dimen/aac_global_border"
            android:elevation="@dimen/aac_elevation_level_1" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/aac_background_text"
            android:padding="@dimen/aac_global_border"
            android:layout_margin="@dimen/aac_global_border"
            android:elevation="@dimen/aac_elevation_level_1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/AACTextAppearance.heading"
                android:text="@string/aac_intro_deque_heading"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/aac_intro_deque_paragraph1"
                android:textAppearance="@style/AACTextAppearance.body"
                android:padding="@dimen/aac_global_border" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/aac_background_text"
            android:padding="@dimen/aac_global_border"
            android:layout_margin="@dimen/aac_global_border"
            android:elevation="@dimen/aac_elevation_level_1"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/AACTextAppearance.heading"
                android:text="@string/aac_learn_more"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.dequesystems.accessibility101.TextViewLink android:id="@+id/aacIntroTextView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/aac_global_border"
                    android:textAppearance="@style/AACTextAppearance.link"
                    android:text="@string/aac_talkBack_link"/>

                <com.dequesystems.accessibility101.TextViewLink android:id="@+id/aacIntroTextView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/aac_global_border"
                    android:textAppearance="@style/AACTextAppearance.link"
                    android:text="@string/aac_contact_us_link"/>

                <com.dequesystems.accessibility101.TextViewLink android:id="@+id/aacIntroTextView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/aac_global_border"
                    android:text="@string/aac_website_link"
                    android:textAppearance="@style/AACTextAppearance.link" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
